Tue Dec  7 23:04:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3539_Regression_Test.cpp:
          Fixed problem in single threaded build

Tue Dec  7 15:52:02 UTC 2010  Steve Huston  <shuston@riverace.com>

        * tests/Atomic_Op_Test.cpp: For platforms w/o built-in atomic op
          support, run fewer iterations of the test loop. Those platforms
          sometimes time out during regression tests. This was a problem
          with Riverace's PA-RISC box so if this change causes problems
          otherwise, please let me know.

Mon Dec  6 15:59:52 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/make_release.py:

          Enabled the calls to update_latest_tag() now that the bug in that
          functions has been fixed in:
          Tue Sep 14 16:42:26 UTC 2010  Adam Mitz  <mitza@ociweb.com>

Sat Dec  4 14:25:26 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (timestamp):
        * ace/Log_Msg.cpp (log):
        * ace/Log_Msg_UNIX_Syslog.cpp (log):
        * ace/Log_Record.cpp (format_msg):
        * examples/Misc/test_timestamp.cpp: Cleanups, correcting buffer sizes
          from old 35-char length to 27 based on new timestamp format. Thanks
          to Thomas Lockhart for these.

Thu Dec  2 18:29:36 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.{h cpp} (timestamp): Changed the format produced from
          ACE::timestamp() from ctime-ish "Day Mon dd hh:mm:ss yyyy" to
          ISO-8601 yyyy-mm-dd hh:mm:ss.mmmmmm. Thank you to Thomas
          Lockhart for this fix. Resolves Bugzilla #3210.
          Also fixed up the doxygen comments related.

        * ace/Log_Record.cpp (format_msg): VERBOSE[_LITE] timestamp also
          changed to ISO-8601 format but uses 3 decimal places after secs.

        * NEWS: Described above change for users.

Mon Nov 29 17:20:47 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:
