@@ -1,3 +1,8 @@
+Tue Dec  7 23:07:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_3878_Regression_Test.cpp:
+          Fixed problem in single threaded build
+
 Tue Dec  7 23:04:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_3539_Regression_Test.cpp:
